# serializer version: 1
# name: test_add_constraints
  'Constraint type must be provided, either when defining the function or when adding it to the problem.'
# ---
# name: test_add_constraints.1
  "The function type 'obj' is not one of those authorized (eq, ineq)."
# ---
# name: test_constraints_dim
  'The function output dimension is not available yet, please call function ineq1(x): 0.5 -x[0] ** 3 <= -1 once.'
# ---
# name: test_evaluate_unknown_jacobians[jacobian_names0-This name is]
  'This name is not among the names of the functions: unknown.'
# ---
# name: test_evaluate_unknown_jacobians[jacobian_names1-These names are]
  'These names are not among the names of the functions: other unknown, unknown.'
# ---
# name: test_get_function_dimension_unavailable
  'The output dimension of function f is not available.'
# ---
# name: test_get_function_dimension_unknown
  'The problem has no function named unknown.'
# ---
# name: test_get_missing_observable
  'missing_observable_name is not among the names of the observables: a, b.'
# ---
# name: test_int_opt_problem[False-Algorithm L_BFGS_B is not adapted to the problem, it does not handle integer variables.\nExecution may be forced setting the 'skip_int_check' argument to 'True'.]
  '''
  Algorithm L_BFGS_B is not adapted to the problem, it does not handle integer variables.
  Execution may be forced setting the 'skip_int_check' argument to 'True'.
  '''
# ---
# name: test_invalid_differentiation_method
  'The class foo is not available; the available ones are: CenteredDifferences, ComplexStep, FirstOrderFD, centered_differences, complex_step, finite_differences.'
# ---
# name: test_is_multi_objective
  'Cannot determine the dimension of the objective.'
# ---
# name: test_is_multi_objective.1
  'Cannot determine the dimension of the objective.'
# ---
# name: test_missing_constjac
  'The function computing the Jacobian of [sum+1] is not implemented.'
# ---
# name: test_no_points_in_database
  'The optimization history is empty.'
# ---
# name: test_no_points_in_database.1
  'The optimization history is empty.'
# ---
# name: test_parallel_differentiation_setting_after_functions_preprocessing
  'The parallel differentiation cannot be changed because the functions have already been pre-processed.'
# ---
# name: test_parallel_differentiation_setting_after_functions_preprocessing.1
  'The parallel differentiation cannot be changed because the functions have already been pre-processed.'
# ---
